--- a/frontend/class-manager/src/app/components/layout/header/header.component.html
+++ b/frontend/class-manager/src/app/components/layout/header/header.component.html
@@ -28,13 +28,12 @@
       </div>
 
       <!-- primary nav -->
-      <!--       <div *ngIf="isLoggedIn()" class="hidden md:flex items-center space-x-1">
-        <a *ngIf="isLoggedIn()" href="#" class="py-2 px-4 text-text-900 hover:text-text-700 block">Home</a>
-        <a *ngIf="isLoggedIn()" href="#" class="py-2 px-4 text-text-900 hover:text-text-700 block">Courses</a>
-        <a *ngIf="isLoggedIn()" href="#" class="py-2 px-4 text-text-900 hover:text-text-700 block">Assignments</a>
-        <a *ngIf="isLoggedIn()" href="#" class="py-2 px-4 text-text-900 hover:text-text-700 block">Exams</a>
+      <div *ngIf="isLoggedIn()" class="hidden md:flex items-center space-x-1">
+        <a *ngIf="isLoggedIn()" href="/home-page" class="py-2 px-4 text-text-900 hover:text-text-700 block">Dashboard</a>
+        <a *ngIf="isLoggedIn()" href="/courses-page" class="py-2 px-4 text-text-900 hover:text-text-700 block">Courses</a>
+        <a *ngIf="isLoggedIn()" href="/schedule-page" class="py-2 px-4 text-text-900 hover:text-text-700 block">Schedule</a>
+        <a *ngIf="isLoggedIn()" href="/tools-page" class="py-2 px-4 text-text-900 hover:text-text-700 block">Tools</a>
       </div>
- -->
       <!-- secondary nav -->
       <div class="ml-auto flex items-center">
         <p-button
